// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalMenu should be rendered correctly 1`] = `
<div
  className="globalMenuBtn"
  id="global_menu_toggle"
>
  <div
    className="container uui-icon uui-enabled globalMenuIcon"
    style={Object {}}
  >
    <SvgrURL
      className=""
    />
  </div>
</div>
`;

exports[`GlobalMenu should be rendered correctly with props 1`] = `
<div
  className="globalMenuBtn root"
  id="global_menu_toggle"
>
  <div
    className="container uui-icon uui-enabled globalMenuIcon"
    style={Object {}}
  >
    <SvgrURL
      className=""
    />
  </div>
</div>
`;
